// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks Renders Default Render list name 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  width: 100%;
}

.c3 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  border-radius: 1rem;
  border: 1px dashed #335a6f;
}

.c4:nth-child(even) {
  background-color: #e6e6e6;
}

.c5 {
  display: inline-block;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  cursor: pointer;
  color: #528b7b;
  background-color: #ffffff;
  border-radius: 100rem;
  border: 2px solid #528b7b;
  padding: 0.375rem 1.25rem;
}

.c5:hover {
  color: #ffffff;
  background-color: #528b7b;
}

.c5:active {
  border: 2px solid #ffffff;
  box-shadow: 0px 0px 0px 2px #528b7b;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      tasks-name
    </h1>
    <progress
      class="c2"
      value="0"
    />
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        Task Circle
        <button
          class="c5"
        >
          Complete Task
        </button>
      </li>
      <li
        class="c4"
      >
        Task Rectangle
        <button
          class="c5"
        >
          Complete Task
        </button>
      </li>
      <li
        class="c4"
      >
        Task Polygon
        <button
          class="c5"
        >
          Complete Task
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tasks Renders Default Render one task 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  width: 100%;
}

.c3 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  border-radius: 1rem;
  border: 1px dashed #335a6f;
}

.c4:nth-child(even) {
  background-color: #e6e6e6;
}

.c5 {
  display: inline-block;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  cursor: pointer;
  color: #528b7b;
  background-color: #ffffff;
  border-radius: 100rem;
  border: 2px solid #528b7b;
  padding: 0.375rem 1.25rem;
}

.c5:hover {
  color: #ffffff;
  background-color: #528b7b;
}

.c5:active {
  border: 2px solid #ffffff;
  box-shadow: 0px 0px 0px 2px #528b7b;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      tasks-name
    </h1>
    <progress
      class="c2"
      value="0"
    />
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        Task Circle
        <button
          class="c5"
        >
          Complete Task
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tasks Renders Default Render three tasks 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  width: 100%;
}

.c3 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  border-radius: 1rem;
  border: 1px dashed #335a6f;
}

.c4:nth-child(even) {
  background-color: #e6e6e6;
}

.c5 {
  display: inline-block;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  cursor: pointer;
  color: #528b7b;
  background-color: #ffffff;
  border-radius: 100rem;
  border: 2px solid #528b7b;
  padding: 0.375rem 1.25rem;
}

.c5:hover {
  color: #ffffff;
  background-color: #528b7b;
}

.c5:active {
  border: 2px solid #ffffff;
  box-shadow: 0px 0px 0px 2px #528b7b;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      tasks-name
    </h1>
    <progress
      class="c2"
      value="0"
    />
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        Task Circle
        <button
          class="c5"
        >
          Complete Task
        </button>
      </li>
      <li
        class="c4"
      >
        Task Rectangle
        <button
          class="c5"
        >
          Complete Task
        </button>
      </li>
      <li
        class="c4"
      >
        Task Polygon
        <button
          class="c5"
        >
          Complete Task
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tasks Renders Default Render two tasks 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  width: 100%;
}

.c3 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  border-radius: 1rem;
  border: 1px dashed #335a6f;
}

.c4:nth-child(even) {
  background-color: #e6e6e6;
}

.c5 {
  display: inline-block;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  cursor: pointer;
  color: #528b7b;
  background-color: #ffffff;
  border-radius: 100rem;
  border: 2px solid #528b7b;
  padding: 0.375rem 1.25rem;
}

.c5:hover {
  color: #ffffff;
  background-color: #528b7b;
}

.c5:active {
  border: 2px solid #ffffff;
  box-shadow: 0px 0px 0px 2px #528b7b;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      tasks-name
    </h1>
    <progress
      class="c2"
      value="0"
    />
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        Task Circle
        <button
          class="c5"
        >
          Complete Task
        </button>
      </li>
      <li
        class="c4"
      >
        Task Rectangle
        <button
          class="c5"
        >
          Complete Task
        </button>
      </li>
    </ul>
  </div>
</div>
`;
